# pgmaster

./: .gitignore
ServerInstall/: CMakeLists.txt  note.txt
ServerInstall/design/: pginstall_design.odt
ServerInstall/src/: main.cpp
ServerInstall/src/impl/: CPostgresInstance.cpp  CPostgresInstance.h  CServiceGenerator.cpp  CServiceGenerator.h  CSystemIOUbuntu.cpp  CSystemIOUbuntu.h  CSystemInquiryUbuntu.cpp  CSystemInquiryUbuntu.h
ServerInstall/src/interface/: IPgConfParser.h  IPostgresInstance.h  IServiceGenerator.h  ISystemIO.h  ISystemInquiry.h  structs.h
ServerInstall/template/: postgres_spider_dev  server.txt
ServerInstall/template/Output/DBProgram/: dbprogram.sh
ServerInstall/template/RunableService/: pgrun.sh
